# RectanglePacking

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  ReadMe.md  RectanlgePacking_developer_notebook.nb
CPPSource/RectangleBinPack/: CMakeLists.txt  GuillotineBinPack.cpp  GuillotineBinPack.h  MaxRectsBinPack.cpp  MaxRectsBinPack.h  Readme.txt  ShelfBinPack.h
CPPSource/RectanglePackingLibrary/: CMakeLists.txt  CustomTypes.h  ManagedTypes.h  RectanglePackUtilities.cpp  RectanglePackUtilities.h  WLGuillotineBinPack.cpp  WLMaxRectsBinPack.cpp  WLRectanglePacker.cpp  WLRectanglePacker.h  WLShelfBinPack.cpp  WLSkylineBinPack.cpp
RectanglePacking/: PacletInfo.wl  ResourceDefinition.nb
RectanglePacking/Documentation/English/Guides/: RectanglePacking.nb
RectanglePacking/Documentation/English/ReferencePages/Symbols/: PackRectangles.nb  RectanglePacker.nb
RectanglePacking/Kernel/: RectanglePacking.wl  RectanglePackingLibrary.wl
Tests/: CMakeLists.txt  TestRectanglePacking.wlt
scripts/: WolframKernel.cmake
